<resources>

    <string name="app_name">Eyedentify</string>

    <!-- MainActivity -->
    <string name="search">Search</string>
    <string name="unlock">Unlock</string>
    <string name="settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>

    <!-- ProfileActivity -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name_field">Name:</string>
    <string name="surname_field">Surname:</string>
    <string name="aka_field">Aka:</string>
    <string name="username_field">Username:</string>
    <string name="contact">Contact</string>

    <!-- SearchActivity -->
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="say_the_email">Say the Email</string>
    <string name="title_activity_settings">Settings</string>


    <!-- SettingsActivity -->
    <string name="version">Version</string>

    <string name="search_history">Search History</string>
    <string name="clear_search_history_periodically">Clear Search History periodically</string>
    <string name="clear_search_history_frequency">Clear Search History frequency</string>

</resources>
