<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AppCompatResource,AppCompatResource" />

    <item
        android:id="@+id/menu_unlock"
        android:icon="@drawable/ic_lock"
        android:title="@string/unlock"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,AppCompatResource" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
